feat: added image

--- a/index.html
+++ b/index.html
@@ -6,27 +6,34 @@
     <title>Document</title>
   </head>
   <body>
-    <span>Hello this is my 1 task</span>
-    <h1>about me:</h1>
-    <img src="./images/1674105390_3-10.jpg" alt="я" width="250" />
-    <div>Name:</div>
- <strong>David</strong>
+    <header>
+      <span>Hello this is my 1 task</span>
+      <h1>about me:</h1>
+      <img src="./images/1674105390_3-10.jpg" alt="я" width="250" />
+      <div>Name:</div>
+      <strong>David</strong>
+    </header>
     <hr />
-<ol></ol>
-  <strong> 
+    <ol></ol>
+    <strong>
+      <main>
+        <li>love animals</li>
+        <li>play computer games</li>
+        <li>learn English</li>
+        <li>study at school</li>
+        <hr />
+        <p>my skills:</p>
+        <ul></ul>
+        <li>lvl En B2</li>
+        <li>basketball player</li>
+      </main>
+    </strong>
 
-    <li>love animals</li><li>play computer games</li><li>learn English</li>
-    <li>IDK</li>
-    <hr> 
-    <p>my skills:</p>
-    <ul></ul>
-    <li>chill out</li>
-
-</strong> 
-
-<a href="https://github.com/DavidBocharov"target="_blank">link to my github</a>
-<br>
-<br>
-The end.
+    <a href="https://github.com/DavidBocharov" target="_blank"
+      >link to my github</a
+    ><img src="./images/github.png" alt="git" width="30" />
+    <br />
+    <br />
+    The end.
   </body>
 </html>
